@@ -45,7 +45,7 @@
 
 ;;; Code:
 
-(require 'pym)				; `static-*' and `def*-maybe'.
+(require 'pym)
 
 
 ;;; @ Compilation.
