@@ -1,3 +1,7 @@
+1999-11-28  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* poe.el, poe-18.el, poe-xemacs.el, pym.el: Modified comments.
+
 1999-11-25  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* poe-18.el: Modified comments.
